# StructureCreator

./: .gitignore  CLAUDE.md  CREATE_ISSUES_README.md  README.md  ROADMAP.md  create-roadmap-issues.py  create-roadmap-issues.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  readme  schema.xml  schema_sample.xml  tailwind.config.js  test-conditional-schema.xml  tsconfig.base.json  vite.config.ts
.claude/rules/: avoid-useeffect.md
.github/workflows/: release.yml
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: database.rs  diff_preview.rs  file_processors.rs  lib.rs  plugins.rs  schema.rs  state.rs  structure_creator.rs  team_library.rs  templating.rs  transforms.rs  types.rs  utils.rs  validation.rs
apps/desktop/src-tauri/tests/: cli_integration.rs
apps/desktop/src/components/: AddTeamLibraryModal.tsx  ConfirmDialog.tsx  Footer.tsx  Icons.tsx  ImportExportModal.tsx  LeftPanel.test.tsx  LeftPanel.tsx  PluginManager.tsx  RecentProjectsSection.tsx  RightPanel.tsx  SettingsModal.tsx  TeamLibrariesSection.tsx  TeamTemplateList.tsx  TemplateHoverPreview.tsx  TemplatePreviewModal.tsx  TemplatePreviewThumbnail.tsx  TreePreview.tsx  UpdateBadge.tsx  UpdateModal.tsx  VisualSchemaEditor.tsx  XmlSchemaEditor.tsx
apps/desktop/src/constants/: shortcuts.test.ts  shortcuts.ts  tags.ts
apps/desktop/src/hooks/: index.ts  useClickAwayEscape.ts  useHoverIntent.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useUpdater.ts
apps/desktop/src/lib/: api.ts
apps/desktop/src/store/: appStore.ts  appStore.undo.test.ts  appStore.update.test.ts  appStore.variables.test.ts  appStore.xmlEditor.test.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/types/: schema.ts
apps/desktop/src/utils/: constants.ts  markdown.test.ts  markdown.ts  validation.test.ts  validation.ts  wizardUtils.test.ts
apps/web/: .env.example  .gitignore  index.html  package.json  react-router.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
apps/web/app/: entry.server.tsx  root.tsx  routes.ts
apps/web/migrations/: 0001_templates.sql
apps/web/src/: App.tsx
apps/web/workers/: app.ts
css/: style.css
design/: structure-creator-ui.html
examples/: README.md  binary-generators.xml  conditional-schema.xml  file-content-templating.xml  inheritance-schema.xml  repeat-schema.xml  transforms-schema.xml  variable-helper-text.xml  wizard-template-example.json
examples/plugins/: README.md
examples/plugins/license-header/: index.js  plugin.json
js/: script.js
js/mylibs/: .gitignore  structurecreator.js  structurecreator.utils.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs  schema.rs  transforms.rs
src-tauri/tests/: cli_integration.rs
src/components/: DiffPreviewModal.tsx  Footer.tsx  Header.tsx  Icons.tsx  ImportExportModal.tsx  LeftPanel.tsx  RecentProjectsSection.tsx  RightPanel.tsx  SettingsModal.tsx  TagInput.tsx  TemplateWizard.tsx  TreePreview.tsx  VisualSchemaEditor.tsx
src/components/wizard/: WizardProgress.tsx
src/constants/: shortcuts.ts
src/hooks/: index.ts  useDebounce.ts  useKeyboardShortcuts.ts
src/lib/: api.ts  platform.ts
src/lib/adapters/: types.ts
src/store/: appStore.ts
src/test/: importExport.test.ts  setup.ts
src/types/: schema.ts
src/utils/: filename.ts  schemaTree.test.ts  schemaTree.ts  theme.ts  wizardUtils.ts
(+106 files in other folders)
