[package]
name = "structure-creator"
version = "1.0.0"
description = "A Tauri app to create folder structures from XML schemas"
authors = ["Structure Creator"]
edition = "2021"

[lib]
name = "structure_creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "structure-creator-cli"
path = "src/bin/cli.rs"
required-features = []

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
ureq = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "color"] }
zip = "2"
lopdf = "0.34"
# Audio metadata
id3 = "1"
metaflac = "0.2"
# Archive processing
tar = "0.4"
flate2 = "1.0"
# SQLite temp file handling
tempfile = "3"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs", "dep:tauri-build"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
